+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 beta 1?
================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #7994: Issue a PendingDeprecationWarning if object.__format__
  is called with a non-empty format string. This is an effort to
  future-proof user code. If a derived class does not currently
  implement __format__ but later adds its own __format__, it would
  most likely break user code that had supplied a format string. This
  will be changed to a DeprecationWaring in Python 3.3 and it will be
  an error in Python 3.4.

- Issue #8268: Old-style classes (not just instances) now support weak
  references.

- Issue #8211: Save/restore CFLAGS around AC_PROG_CC in configure.in, compiler
  optimizations are disabled when --with-pydebug is used.

- Issue #1583863: An unicode subclass can now override the __unicode__ method

- Issue #6474: Make error message from passing an inadequate number of keyword
  arguments to a function correct.

- Issue #8164: Don't allow lambda functions to have a docstring.

- Issue #3137: Don't ignore errors at startup, especially a keyboard interrupt
  (SIGINT).  If an error occurs while importing the site module, the error is
  printed and Python exits.  Initialize the GIL before importing the site
  module.

- Code objects now support weak references.

Library
-------

- Issue #8294: The Fraction constructor now accepts Decimal and float
  instances directly.

- Issue #7279: Comparisons involving a Decimal signaling NaN now
  signal InvalidOperation instead of returning False.  (Comparisons
  involving a quiet NaN are unchanged.)  Also, Decimal quiet NaNs
  are now hashable;  Decimal signaling NaNs remain unhashable.

- Issue #2531: Comparison operations between floats and Decimal
  instances now return a result based on the numeric values of the