@@ -12,6 +12,8 @@ What's New in Python 2.7 beta 1?
 Core and Builtins
 -----------------
 
+- Raise a TypeError when trying to delete a T_STRING_INPLACE struct member.
+
 - Issue #7994: Issue a PendingDeprecationWarning if object.__format__
   is called with a non-empty format string. This is an effort to
   future-proof user code. If a derived class does not currently
